# api_demo

./: .gitignore  Makefile  README.md  dockerfile
app/: pyproject.toml
app/api/: config.py  database.py  main.py
app/api/auth/: auth.py  deps.py
app/api/routes/: files.py
app/api/schemas/: file.py  token.py  user.py
app/api/tests/: test_auth.py  test_files.py
app/scripts/: test.sh
app/tests_e2e/: test_e2e_auth.py  test_e2e_files.py
scripts/: build.sh  integration-test.sh  run.sh  start.sh  stop.sh  test-e2e.sh  test-local.sh
